<resources>
    <string name="app_name">Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="nic">NIC</string>
    <string name="mobile">Mobile</string>
    <string name="e_mail">E-Mail</string>
    <string name="location">Location</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="last_purchase_location">Last Purchase Location</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_abcds">abcds</string>
</resources>
